--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Luiz Henrique da Silva",
   "license": "ISC",
   "dependencies": {
+    "consign": "^0.1.6",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mysql": "^2.16.0"
